@@ -1308,6 +1308,12 @@ int __connect_part_one( DMHDBC connection, char *driver_lib, char *driver_name, 
             connection -> environment -> requested_version;
         }
         /* end of fix */
+
+        /*
+         * get value that has been pushed up by the initial connection to this driver
+         */
+
+        connection -> driver_act_ver = connection -> environment -> driver_act_ver;
     }
     else
     {
@@ -1375,6 +1381,12 @@ int __connect_part_one( DMHDBC connection, char *driver_lib, char *driver_name, 
     		mutex_lib_exit();
             return 0;
         }
+
+        /*
+         * push up to environment to be reused
+         */
+
+        connection -> environment -> driver_act_ver = connection -> driver_act_ver;
 
         env_lib_list -> env_handle = connection -> driver_env;
 
